# sandbox-agent

./: .env.development.example  CLAUDE.md  Cargo.toml  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/commands/: post-release-testing.md
.context/: proposal-revert-actions-to-queues.md  proposal-rivetkit-sandbox-resilience.md  proposal-task-owner-git-auth.md
docker/inspector-dev/: Dockerfile
docker/release/: linux-aarch64.Dockerfile  linux-x86_64.Dockerfile  macos-aarch64.Dockerfile  macos-x86_64.Dockerfile  windows.Dockerfile
docker/runtime/: Dockerfile  Dockerfile.full
docker/test-agent/: Dockerfile
docker/test-common-software/: Dockerfile
docs/: agent-sessions.mdx  architecture.mdx  cli.mdx  common-software.mdx  computer-use.mdx  custom-tools.mdx  docs.json  llm-credentials.mdx  mcp-config.mdx  multiplayer.mdx  openapi.json  orchestration-architecture.mdx  quickstart.mdx  react-components.mdx  sdk-overview.mdx  security.mdx  session-persistence.mdx  skills-config.mdx  theme.css  troubleshooting.mdx
docs/agents/: amp.mdx  claude.mdx  codex.mdx  cursor.mdx  opencode.mdx  pi.mdx
docs/deploy/: agentcomputer.mdx  boxlite.mdx  cloudflare.mdx  computesdk.mdx  daytona.mdx  docker.mdx  e2b.mdx  foundry-self-hosting.mdx  local.mdx  modal.mdx  vercel.mdx
examples/agentcomputer/: package.json
examples/boxlite/: .gitignore  Dockerfile  package.json  tsconfig.json
examples/boxlite-python/: .gitignore  Dockerfile  credentials.py  main.py  requirements.txt  setup_image.py
examples/cloudflare/: Dockerfile  README.md  vitest.config.ts
examples/computesdk/: package.json
examples/docker/: package.json
examples/docker-python/: client.py  credentials.py  main.py  requirements.txt
examples/modal/: package.json
examples/permissions/: tsconfig.json
examples/persist-memory/: tsconfig.json
examples/persist-postgres/: package.json
examples/persist-sqlite/: package.json
examples/sprites/: package.json
factory/: CLAUDE.md
foundry/: AGENT-HANDOFF.md  CLAUDE.md  FOUNDRY-CHANGES.md  compose.dev.yaml  compose.mock.yaml  compose.preview.yaml
foundry/docker/: backend.Dockerfile  backend.dev.Dockerfile  backend.preview.Dockerfile  foundry-base.Dockerfile  frontend-caddy-entrypoint.sh  frontend.Caddyfile  frontend.Dockerfile  frontend.dev.Dockerfile  frontend.mock.Dockerfile  frontend.preview.Dockerfile  nginx.preview.conf
foundry/scripts/: publish-foundry-base.sh
research/: desktop-streaming-architecture.md
research/acp/: friction.md  inspector-unimplemented.md  merge-acp.md  old-rest-openapi-list.md  spec.md  v1-schema-to-acp-mapping.md
server/: ARCHITECTURE.md  compose.dev.yaml
(+102 files in other folders)
